[metadata]
name = ignition_api_stubs
version = 8.1.22.post1
description = Ignition Scripting API Stubs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ignition-api.github.io/stubs
author = César Román
author_email = cesar@thecesrom.dev
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Stubs Only
    Typing :: Typed
keywords =
    hmi
    ignition
    inductive automation
    scada
project_urls =
    Funding = https://github.com/sponsors/thecesrom
    Source = https://github.com/ignition-api/stubs
    Tracker = https://github.com/ignition-api/stubs/issues

[options]
install_requires =
    mypy[python2]==0.971
    types-enum34
python_requires = >=3.6
include_package_data = True
package_dir =
    =stubs

[options.package_data]
* = *.pyi, py.typed
